[package]
name = "chat_box"
version = "0.1.0"
authors = ["namelesslogger <johnshanie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
unicode-width = "0.1"
termion = "1.5"
whoami = "0.7.0"
chrono = "0.4.0"
unicode-segmentation = "1.2"
tui = "0.13.0"
crypto_box = "0.5.0"
rand = "0.7.3"
hex = "0.4.2"